feat: Implement API endpoint to add new message
